--- a/layers/dependency_injector/pubspec.yaml
+++ b/layers/dependency_injector/pubspec.yaml
@@ -6,8 +6,8 @@ environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
-  get_it: ^7.6.7
-  meta: ^1.10.0
+  get_it: ^7.7.0
+  meta: any
 
 dev_dependencies:
   test: ^1.24.9
