--- a/layers/log_reporter/pubspec.yaml
+++ b/layers/log_reporter/pubspec.yaml
@@ -6,7 +6,7 @@ environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
-  logger: ^2.0.2+1
+  logger: ^2.2.0
 
   dependency_injector:
     path: ../dependency_injector
