--- a/layers/remote/pubspec.yaml
+++ b/layers/remote/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^5.4.0
+  dio: ^5.4.3+1
   dio_smart_retry: ^6.0.0
   pretty_dio_logger: ^1.3.1
 
