--- a/tools/firestore_file_uploader/pubspec.yaml
+++ b/tools/firestore_file_uploader/pubspec.yaml
@@ -6,14 +6,14 @@ environment:
   sdk: ^3.1.2
 
 dependencies:
-  args: ^2.4.2
-  http: ^1.2.0
-  get_it: ^7.6.7
-  googleapis_auth: ^1.4.1
-  logger: ^2.0.2+1
+  args: ^2.5.0
+  http: ^1.2.1
+  get_it: ^7.7.0
+  googleapis_auth: ^1.6.0
+  logger: ^2.2.0
 
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.9
   mocktail: ^1.0.3
-  build_runner: ^2.4.8
+  build_runner: ^2.4.9
