--- a/tools/pokedex_builder/pubspec.yaml
+++ b/tools/pokedex_builder/pubspec.yaml
@@ -6,18 +6,18 @@ environment:
   sdk: ^3.1.2
 
 dependencies:
-  args: ^2.4.2
-  dio: ^5.4.1
+  args: ^2.5.0
+  dio: ^5.4.3+1
   dartz: ^0.10.1
   equatable: ^2.0.5
   fimber: ^0.7.0
-  get_it: ^7.6.7
+  get_it: ^7.7.0
   json_annotation: ^4.8.1
 
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.25.2
   mocktail: ^1.0.3
-  build_runner: ^2.4.8
+  build_runner: ^2.4.9
   json_serializable: ^6.7.1
   http_mock_adapter: ^0.6.1
