--- a/.github/workflows/_analyze_and_test_app.yaml
+++ b/.github/workflows/_analyze_and_test_app.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup dart environment
         uses: dart-lang/setup-dart@v1
@@ -25,6 +25,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{env.FLUTTER_VERSION}}
+          channel: stable
           cache: true
           cache-key: flutter
           cache-path: ${{ runner.tool_cache }}/flutter
