--- a/.github/workflows/_build_android.yaml
+++ b/.github/workflows/_build_android.yaml
@@ -62,6 +62,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{env.FLUTTER_VERSION}}
+          channel: stable
           cache: true
           cache-key: flutter
           cache-path: ${{ runner.tool_cache }}/flutter
