fixes flutter and dart version in pubspec

--- a/layers/dependency_injector/pubspec.yaml
+++ b/layers/dependency_injector/pubspec.yaml
@@ -3,7 +3,7 @@ description: Provides the dependency injection.
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: 3.3.3
 
 dependencies:
   get_it: ^7.6.7
