--- a/layers/log_reporter/pubspec.yaml
+++ b/layers/log_reporter/pubspec.yaml
@@ -3,7 +3,7 @@ description: Provides support for generating logs.
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: 3.3.3
 
 dependencies:
   logger: ^2.2.0
