--- a/layers/use_case/pubspec.yaml
+++ b/layers/use_case/pubspec.yaml
@@ -3,7 +3,7 @@ description: Provides base classes for making use cases.
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: 3.3.3
 
 dependencies:
   either_dart: ^1.0.0
