updates to latest flutter version

--- a/.github/workflows/_analyze_and_test_app.yaml
+++ b/.github/workflows/_analyze_and_test_app.yaml
@@ -4,8 +4,8 @@ on:
   workflow_call:
 
 env:
-  DART_SDK_VERSION: 3.3.3
-  FLUTTER_VERSION: "3.19.5"
+  DART_SDK_VERSION: 3.3.4
+  FLUTTER_VERSION: 3.19.6
 
 
 jobs:
