--- a/.github/workflows/_analyze_and_test_flutter_module.yaml
+++ b/.github/workflows/_analyze_and_test_flutter_module.yaml
@@ -17,8 +17,8 @@ on:
         required: true
 
 env:
-  DART_SDK_VERSION: 3.3.3
-  FLUTTER_VERSION: "3.19.5"
+  DART_SDK_VERSION: 3.3.4
+  FLUTTER_VERSION: 3.19.6
 
 jobs:
   setup:
