--- a/.github/workflows/_build_upload_pokedex_workflow.yaml
+++ b/.github/workflows/_build_upload_pokedex_workflow.yaml
@@ -11,8 +11,8 @@ on:
         required: true
 
 env:
-  DART_SDK_VERSION: 3.3.3
-  FLUTTER_VERSION: "3.19.5"
+  DART_SDK_VERSION: 3.3.4
+  FLUTTER_VERSION: 3.19.6
   PATH_POKEDEX_BUILDER: ./tools/pokedex_builder
   PATH_POKEDEX_UPLOADER: ./tools/firestore_file_uploader
 
