--- a/melos.yaml
+++ b/melos.yaml
@@ -47,6 +47,33 @@ scripts:
     packageFilters:
       flutter: true
 
+  cache_clean:
+    run: |
+      flutter clean
+      flutter pub cache repair
+      flutter pub get
+    description: Clean cache.
+    exec:
+      concurrency: 1
+
+  ios_clean:
+    run: |
+      rm -rf ios/Pods/*
+      rm -f ios/Podfile.lock
+      rm -r ios/.symlinks
+      rm -r ios/Flutter/Flutter.framework
+      rm -f ios/Flutter/Flutter.podspec
+      fvm flutter clean
+      flutter pub get
+      cd ios 
+      pod cache clean --all
+      pod repo update
+      cd ..
+      flutter pub get
+      cd ios
+      pod install
+    description: Clean cache.
+
   format:
     run: dart format lib test --set-exit-if-changed
     description: Run `flutter format` in all packages.
