adds cache of flutter in CI

--- a/.github/workflows/_analyze_and_test_flutter_module.yaml
+++ b/.github/workflows/_analyze_and_test_flutter_module.yaml
@@ -56,7 +56,9 @@ jobs:
         with:
           flutter-version: ${{env.FLUTTER_VERSION}}
           channel: stable
-
+          cache: true
+          cache-key: flutter
+          cache-path: ${{ runner.tool_cache }}/flutter
 
       - name: Get dart dependencies
         run: flutter pub get
