--- a/.github/workflows/_build_android.yaml
+++ b/.github/workflows/_build_android.yaml
@@ -63,7 +63,9 @@ jobs:
         with:
           flutter-version: ${{env.FLUTTER_VERSION}}
           channel: stable
-
+          cache: true
+          cache-key: flutter
+          cache-path: ${{ runner.tool_cache }}/flutter
 
       - name: Create directory
         run: mkdir -p android/app/.signing
