--- a/features/pokemon/pubspec.yaml
+++ b/features/pokemon/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pokemon
-description: "Provides pokemon features for the app"
+description: "Provides pokemon features for app"
 publish_to: 'none'
 
 environment:
