--- a/layers/error_reporter/pubspec.yaml
+++ b/layers/error_reporter/pubspec.yaml
@@ -1,5 +1,5 @@
 name: error_reporter
-description: Provides reporting and handling errors.
+description: Provides reporting and handling errors for the app
 publish_to: 'none'
 
 environment:
