--- a/layers/log_reporter/pubspec.yaml
+++ b/layers/log_reporter/pubspec.yaml
@@ -1,5 +1,5 @@
 name: log_reporter
-description: Provides support for generating logs.
+description: Provides support for generating logs for the app
 publish_to: 'none'
 
 environment:
