--- a/.github/workflows/feature_settings.yaml
+++ b/.github/workflows/feature_settings.yaml
@@ -6,11 +6,14 @@ concurrency:
 
 on:
   push:
+    branches:
+      - '**'
+    tags-ignore:
+      - '*-review'
+      - '*-prod'
     paths:
-      - features/settings/**
-
-#on:
-#  push
+      - 'features/settings/**'
+      - '.github/workflows/feature_settings.yaml'
 
 permissions:
   checks: write
