--- a/.github/workflows/_build_android.yaml
+++ b/.github/workflows/_build_android.yaml
@@ -40,7 +40,7 @@ on:
 env:
   DART_SDK_VERSION: 3.4.3
   FLUTTER_VERSION: 3.22.2
-  JAVA_VERSION: "12.x"
+  JAVA_VERSION: "17"
   PROPERTIES_PATH: "./android/key.properties"
 
 jobs:
@@ -52,9 +52,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Java environment
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
+          distribution: 'temurin'
           java-version: ${{env.JAVA_VERSION}}
           cache: 'gradle'
 
