--- a/layers/design_system/pubspec.yaml
+++ b/layers/design_system/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   alchemist: ^0.7.0
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.8
+  flutter_animate: ^4.5.0
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   lottie: ^3.1.2
